--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,23 @@
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-node_modules
-bower_components
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-*.sublime*
+# testing
+/coverage
 
-psd
-thumb
-sketch
+# production
+/build
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
