feat #33: 나의 여행 페이지 데이터 연결 (#34)
* chore: 데이터 저장 형식 변경

* chore #33: 나의 여행 페이지와 연결

* feat #33: 나의 여행 페이지에 데이터 출력

* feat #33: TripModal 에 data 연결

* feat #33: image 데이터 연결

* chor #33: json server 자동화

* chore #33: 데이터 없을 때 처리

* chore #33: 페이지 연결을 위한 수정

--- a/travel-project/package.json
+++ b/travel-project/package.json
@@ -19,10 +19,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run react\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react": "react-scripts start",
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
