--- a/travel-project/package.json
+++ b/travel-project/package.json
@@ -12,9 +12,7 @@
     "react": "^19.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^19.1.0",
-
     "react-router-dom": "^7.5.3",
-
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "json-server": "^1.0.0-beta.3"
   }
 }
